WIP
-----------------------------
* Fuel Calculator
  - Add Battery charge drain & regen (%) per lap to history log.
  - History table now supports multi-selection that adds data from any columns at once.

* RestAPI Module
  - Improved and optimized accessing methods.
  - Updated session info accessing paths that work in
    both single-player and multi-player sessions.

2.14.1 (2024-06-24)
-----------------------------
* Radar Widget
  - Add 3 new "auto_hide_minimum_distance" options (ahead, behind, side),
    which define an invisible rectangle area(unit meter) that auto hides radar
    if no vehicle is within the rectangle area.
    Default value is "-1", which auto scales with "radar_radius" value.
    Set to any positive value to customize radar auto-hide range.
  - Add 3 new "vehicle_maximum_visible_distance" options (ahead, behind, side),
    which define an invisible rectangle area(unit meter) that
    hides any vehicle outside the rectangle area.
    Default value is "-1", which auto scales with "radar_radius" value.
    Set to any positive value to customize vehicle visible range.
  - Add 3 additional distance circle marks (total of 5 marks)
    that can be used to determine nearby vehicle relative distance.
    Each circle's default radius value is "10" meter apart.
    Note, circle marks are only displayed if "distance_circle_*_radius" values
    are within "radar_radius" value.

* Relative, Rivals, Standings Widget
  - Now draws logo only once per unique brand and stores image in cache.

* Misc
  - Updated User Guide info for Radar Widget.

2.14.0 (2024-06-14)
-----------------------------
* General
  - Config window can now be opened by double-clicking on tray icon.

* Vehicle Brand Editor
  - Add new "import from" menu, which allows importing
    brand info directly from Rest API.
    To import from Rest API, just make sure game is running,
    then click either "RF2 Rest API" or "LMU Rest API" from menu, done.