@@ -918,6 +918,17 @@ WIDGET_DEFAULT = {
         "position_x": 374,
         "position_y": 401,
         "opacity": 0.9,
+        "font_name": "Consolas",
+        "font_size": 13,
+        "font_weight": "bold",
+        "enable_auto_font_offset": True,
+        "font_offset_vertical": 0,
+        "show_readings": False,
+        "readings_offset": 0.5,
+        "font_color_throttle": "#FFFFFF",
+        "font_color_brake": "#FFFFFF",
+        "font_color_clutch": "#FFFFFF",
+        "font_color_ffb": "#FFFFFF",
         "enable_horizontal_style": False,
         "bar_length": 100,
         "bar_width_unfiltered": 5,
