@@ -2,12 +2,21 @@ WIP
 -----------------------------
 * Fuel Calculator
   - Add Battery charge drain & regen (%) per lap to history log.
-  - History table now supports multi-selection that adds data from any columns at once.
+  - History table now supports multi-selection that adds data
+    from any columns at once.
 
 * RestAPI Module
   - Improved and optimized accessing methods.
   - Updated session info accessing paths that work in
     both single-player and multi-player sessions.
+
+* Pedal Widget
+  - Add "show_readings" option, which shows pedal input
+    and force feedback readings.
+    Note, while "show_*_filtered" option is enabled, only the highest
+    reading between filtered & raw input is displayed.
+    Text position can be adjusted by "readings_offset" option,
+    default value is 0.5, which sets position in the middle.
 
 2.14.1 (2024-06-24)
 -----------------------------
